manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-apps-ingress
  namespace: default  # Thay nếu bạn không dùng namespace default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
    
spec:
  rules:
    - host: opswat.chucthien.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8888
          - path: /proxy
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 5000
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /argocd
            pathType: Prefix
            namespace: argocd
